[project]
name = "ws-sync"
version = "0.8.0"
description = "Keep objects synchronized over a persistent WebSocket session"
authors = [{ name = "Joong-Won Seo", email = "joong.won.seo@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "starlette>=0.37.2",
    "jsonpatch~=1.33",
    "pydantic>=2,<3",
    "pytest-cov>=6.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9",
    "pytest-asyncio>=1.0.0,<2",
    "ipykernel>=6.29.5,<7",
    "pytest-xdist>=3.8.0,<4",
    "pyright[nodejs]>=1.1.402,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle
    "F",     # pyflakes
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "I",     # isort
    "ASYNC", # flake8-async
]
extend-safe-fixes = ["UP"]
ignore = [
    "E501",   # line too long (formatter takes care of this, prompt strings have to be long)
    "E741",   # variable names l and O are forbidden
    "E402",   # module level import not at top of file
    "B027",   # empty method without abstract decorator
    "B028",   # no explicit stacklevel keyword argument in warnings
    "SIM102", # Combine nested ifs
]

[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
